--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /*--------------------------------------------------
 Project Name: Tiny One
 Technology: HTML5, CSS3, Bootstrap 4;
+Project URL: https://imamcu07.github.io/tiny-one/
 Author: ImAmUdDiN
 Author URL: https://about.me/imamcu07
 
